# mimeo-main-zh

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: china-value-investors.md
output-smoke/duan-yong-ping/: SKILL.md
output-smoke/duan-yong-ping/references/: anti-patterns.md  frameworks.md  heuristics.md  mental-models.md  principles.md  quotes.md  sources.md
prompts/: cluster.md  critique.md  extract.md  synthesize_agents.md  synthesize_skill.md
scripts/: test_deepseek.py
src/mimeo/: cli.py  config.py  critique.py  distill.py  identity.py  llm.py  pipeline.py  research.py  synthesize.py  verify.py  writers.py
